# chiral-db

./: .env.example  .gitignore  404.html  Justfile  README.md  assignment4.md  check_ports.py  demo2.py  docker-compose.yml  feed_data.py  feed_data2.py  index.html  pyproject.toml  query.md  simulation_code.py  verify_assignment.py
benchmark-results/: benchmark_records_a4.json  benchmark_summary_a4.json  comparison_results.json  comparison_summary.md
examples/: programmatic_usage.py
getting_started/dashboard/: index.html
getting_started/installation/: index.html
guide/client_api/: index.html
guide/query_language/: index.html
internals/architecture/: index.html
scripts/: __init__.py  manage.py  performance_benchmark.py  performance_comparison.py
search/: search_index.json
src/chiral/: config.py  main.py
src/chiral/core/: ingestion.py  orchestrator.py  query_service.py
src/chiral/db/: ddl_helpers.py  metadata_store.py  observability.py  performance.py  query_builder.py  schema.py  sessions.py
src/chiral/domain/: __init__.py  contracts.py  key_policy.py  normalization.py  routing.py
src/chiral/utils/: clock.py  heuristics.py
src/chiral/worker/: analyzer.py  migrator.py
tests/: conftest.py  test_acid_properties.py  test_ddl_helpers_phase3.py  test_jsonb_strategy_phase4.py  test_key_policy_phase3.py  test_metadata_phase5.py  test_migration_step4_helpers.py  test_normalization_phase2.py  test_observability_phase8.py  test_performance_benchmark.py  test_performance_phase7.py  test_query_phase6.py  test_routing_phase1.py  test_schema_step3.py
webapp/: readme.md
webapp/dashboard/: .dockerignore  index.html  lint.json  lint.txt  package-lock.json  package.json
webapp/dashboard/src/: App.tsx  CrudPanel.tsx  DatabaseNode.tsx  SearchableDropdown.tsx  api.ts  index.css  initialElements.ts
