[project]
name = "chiral-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "faker>=40.4.0",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "orjson>=3.11.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "sse-starlette>=3.2.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
# Enable every single rule in the registry
select = ["ALL"]
# Ignore specific conflicts and annoyances
ignore = [
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
    "COM812",  # Trailing comma (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
    "S608",
    "PLR2004",
    "PLR0913",# too many arguments
    "PLR0912",# too many branches
    "PLR0915",# too many statements
    "E501",   # line too long
    "C901",   # complex functions
    "BLE001", # broad exception
    "T201",   # print statements
    "BLE001", # broad exception
    "FBT003", # boolean positional args
    "D103",   # missing docstrings
    "S603", "S607", "S310",   # subprocess security (ignore)
    "ANN401",                 # Any typing
    "FBT001",                 # boolean args
    "S311",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D", "SLF001"]
"demo2.py" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
